# diabnet

./: .gitignore  README.md  Untitled.ipynb  calibrate.py  hyperopt.py  hyperopt_batch256_adamw_round0.db  hyperopt_batch256_adamw_round1.db  hyperopt_batch256_round0.db  pyproject.toml  requirements.txt  training.py
.trash/: explain.py  explain_model-ensemble.ipynb  explain_model.ipynb
analysis/: 01-training-results-analysis.ipynb  analysis.py
configs/: full-training.toml  simple-training.toml
diabnet/: __init__.py  apply.py  apply_ensemble.py  calibration.py  data.py  ensemble.py  metrics.py  model.py  optim.py  train.py
docs/: README.md
hyperopt/: adamw_lc1_best_params.json  adamw_lc1_best_params_copy5.json  adamw_lc1_best_params_copy6.json  adamw_lc2_best_params.json  adamw_lc2_best_params_copy5.json  adamw_lc2_best_params_copy6.json  adamw_lc3_best_params_copy6.json  adamw_lc4_best_params_copy6.json  adamw_lc5_best_params_copy6.json  adamw_lc5_best_params_copy7.json  adamw_lc6_best_params_copy6.json  adamw_lc7_best_params_copy6.json  calibration.ipynb  experiment-adamw-lc1-copy1.pbz2  experiment-adamw-lc1-copy2.pbz2  experiment-adamw-lc1.pbz2  experiment-adamw-lc2-copy1.pbz2  experiment-adamw-lc2-copy2.pbz2  experiment-adamw-lc2.pbz2  experiment-radam-lc2-copy2.pbz2  hyperopt.py  hyperopt2_adamw_lc1_best_params.json  hyperopt2_adamw_lc2_best_params.json  hyperopt2_adamw_lc3_best_params.json  hyperopt2_adamw_lc4_best_params.json  hyperopt2_adamw_lc5_best_params.json  hyperopt2_adamw_lc6_best_params.json  hyperopt2_adamw_lc7_best_params.json  radam_lc1_best_params_copy5.json  radam_lc2_best_params.json  radam_lc2_best_params_copy5.json
notebooks/: #report_ensemble.py#  .~lock.data_description.ods#  01-training-results-analysis-Copy1.ipynb  01-training-results-analysis.ipynb  01-training-results-ensemble-zg.ipynb  03-calibration-jvsg.ipynb  03-calibration.ipynb  04-family-cross-validation-jvsg.ipynb  04-family-cross-validation.ipynb  05-example-n-cases.ipynb  06-QA.ipynb  07-explain-ensemble-models-jg.ipynb  07-explain-ensemble-models-jvsg.ipynb  07-explain-ensemble-models.ipynb  08-relative-score-zg.ipynb  08-relative-score.ipynb  QA.ipynb  README.md  S01-data-stats.ipynb  S02-distribution_snp_sets.ipynb  S03-model-comparative.ipynb  S04-explain-ensemble-models-baselines.ipynb  S06-locally-connected-layers.ipynb  S07-families.ipynb  S08-snp-distance.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  (+38 more)
(+14076 files in other folders)
