[tool.poetry]
name = "diabnet"
version = "0.1.0"
description = "Neural Network to predict type 2 Diabetes Mellitus."
authors = ["Jose Geraldo de Carvalho Pereira <zgcarvalho@outlook.com>", "João Victor da Silva Guerra <jvsguerra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
torch = "^1.8.1"
numpy = "^1.19.4"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
scikit-learn = "^0.24.2"
toml = "^0.10.2"
ax-platform = "^0.1.19"
jupyter = "^1.0.0"
scipy = "^1.6.0"
seaborn = "^0.11.1"
astropy = "^4.2"
captum = "^0.3.1"
uncertainty-calibration = "^0.0.9"
flake8 = "^3.9.2"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pynvim = "^0.4.2"
mypy = "^0.812"
pylint = ">=2.6.0"
black = "^21.5b1"
importlib-metadata = "^4.0.1"
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
